--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!--comment-->
+    <!--comment Markdown-->
 <h1>Hello there</h1>
 <h6>Hi</h6>
 <b>Hi iam using bold</b>
